5.9.0
NEW
    - Added "player frame in target frame style"
    - Immersive Questing: "Next Gossip" with space
    - Show cooldowns at bags and character correct by using our own cooldown system
    - Added toggle for player PvP indicator

FIXES
    - Update "Raid Debuffs"
    - Guild auto repair if not in guild
    - Gamemenu fixes to better interact with ElvUI

5.8.0
NEW
    - Added Talent Set Manager support (button on hero panel)
    - Button flyout direction is based on actionbar screen position

FIXES
    - Fix castbar latency issue
    - Fix rested expbar issue
    - Fix inactive factions listed under classic and others
    - Fix Postal skin issue
    - Update "Raid Debuffs"
    - Possible fix for chatframe floating max error

5.7.5
FIXES
    - Fix chatframe fade
    - Update party portraits correctly
    - Fix arena headers
    - Fix keybind slash command
    - Fix arena prep frames overlaps with quests

5.7.4
FIXES
    - Fix some castbar issues
    - Fix some mirrottimer issues

5.7.2
FIXES
    - Fix scrolling in dropdown settings

5.7.1
FIXES
    - Fix hero panel icon border if Mail skin is disabled

5.7.0
NEW
    - Dropdown in GW2 Settings habe now scrolling
    - "Importend Raid & Dungeon" Debuffs can now be disable/enabled per debuffs
    - Added ingame notification if a new addon update is available (icon at the micromenu)
    - Added missing types at GW2 floating combat text
    - We now use blizzards heropanel itemslots, that means that now everything can applyed to that buttons and the can be used, if they have "use" attributes

FIXES
    - Fix Minimap button alignments
    - Fix an rare error with reputation ignore
    - Added fallback for moverframes, to prevent profile corruptions
    - Fix dodgebar spell changing, if customs spell is Settings
    - Added any button to the healthglobe

5.6.1
FIXES
    - Fix wrong lib name

5.6.0
NEW
    - Added error handler, so that yo can see in the chat if a error was caused by GW2 UI