@@ -24,4 +24,5 @@
     
     <Script file="immersive\skins\addons\immersion.lua"/>
     <Script file="immersive\skins\addons\postal.lua"/>
+    <Script file="immersive\skins\addons\WorldQuestTracker.lua"/>
 </Ui>
