@@ -486,6 +486,7 @@ GW_DEFAULT["BARBERSHOP_SKIN_ENABLED"] = true
 GW_DEFAULT["INSPECTION_SKIN_ENABLED"] = true
 GW_DEFAULT["DRESSUP_SKIN_ENABLED"] = true
 GW_DEFAULT["HELPFRAME_SKIN_ENABLED"] = true
+GW_DEFAULT["SKIN_WQT_ENABLED"] = true
 
 GW_DEFAULT["USE_BATTLEGROUND_HUD"] = true
 
