@@ -14,6 +14,8 @@ local function LoadSkinsPanel(sWindow)
 
     createCat("General Skins", "Enable and disable general skins", p, 6)
 
+    addOption(p, "World Quest Tracker Addon", nil, "SKIN_WQT_ENABLED", nil, nil, {["QUESTTRACKER_ENABLED"] = true})
+    addOption(p, "Immersion Addon", nil, "IMMERSIONADDON_SKIN_ENABLED")
     addOption(p, MAINMENU_BUTTON, nil, "MAINMENU_SKIN_ENABLED")
     addOption(p, "Static Popup", nil, "STATICPOPUP_SKIN_ENABLED")
     addOption(p, SHOW_BATTLENET_TOASTS, nil, "BNTOASTFRAME_SKIN_ENABLED")
@@ -24,7 +26,6 @@ local function LoadSkinsPanel(sWindow)
     addOption(p, READY_CHECK, nil, "READYCHECK_SKIN_ENABLED")
     addOption(p, "Talking Head Frame", nil, "TALKINGHEAD_SKIN_ENABLED")
     addOption(p, "Timer Tracker Frame", nil, "TIMERTRACKER_SKIN_ENABLED")
-    addOption(p, "Immersion Addon", nil, "IMMERSIONADDON_SKIN_ENABLED")
     addOption(p, FLIGHT_MAP, nil, "FLIGHTMAP_SKIN_ENABLED")
     addOption(p, "Use Blizzard Class Colors", nil, "BLIZZARDCLASSCOLOR_ENABLED")
     addOption(p, ADDON_LIST, nil, "ADDONLIST_SKIN_ENABLED")
